--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ avatar_img_path: "imgs/photo.jpg"
 
 
 front_img: yes
-front_img_path: "imgs/background.jpg"
+front_img_path: "imgs/background.jpeg"
 #front_img_path: "https://external.url/image.jpg"
 
 
